设置侧栏webview样式

--- a/src/webview/barview/index.html
+++ b/src/webview/barview/index.html
@@ -2,22 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- 安全策略 -->
+    #policy
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- css文件 -->
     #css
 </head>
 <body>
     <div class="main">
-        <div class="top">
-            11111
+        <button class="main-button">选择图片</button>
+    </div>
+    <div class="list">
+        <div class="image">
+            <img src="https://raw.githubusercontent.com/wangyige0701/vscodeCustomExtension/master/resources/image/title.png">
         </div>
-        <div class="list">
-            22222
+        <div class="image select">
+            <img class="select" src="https://raw.githubusercontent.com/wangyige0701/vscodeCustomExtension/master/resources/image/title.png">
         </div>
     </div>
-    <script>
-        document.querySelector('.main').innerHTML = '33333333';
-    </script>
+    <!-- js文件 -->
     #js
 </body>
 </html>
