列表图片回显

--- a/src/webview/barview/index.html
+++ b/src/webview/barview/index.html
@@ -15,11 +15,11 @@
             <button class="button" id="selectImage">选择图片</button>
         </header>
         <nav class="list" id="list">
-            <div class="image-container">
+            <!-- <div class="image-container">
                 <img class="image" loading="lazy" src="https://raw.githubusercontent.com/wangyige0701/vscodeCustomExtension/master/resources/image/title.png">
                 <span class="image-operation image-select icon-circle-background select"></span>
                 <span class="image-operation image-delete icon-delete"></span>
-            </div>
+            </div> -->
             <!-- <div class="image-container select">
                 <img class="image" src="https://raw.githubusercontent.com/wangyige0701/vscodeCustomExtension/master/resources/image/title.png">
             </div> -->
