修改webview的css和js文件处理方法

--- a/src/webview/barview/index.html
+++ b/src/webview/barview/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header class="top" id="top">
-            <button class="button" id="selectImage">选择图片</button>
+            <button class="button" id="selectImage">上传图片</button>
         </header>
         <nav class="list" id="list">
             <!-- <div class="image-container">
