--- a/src/webview/background/index.html
+++ b/src/webview/background/index.html
@@ -12,7 +12,21 @@
 <body>
     <div class="container">
         <header class="top" id="top">
-            <button class="button" id="selectImage">上传图片</button>
+            <div id="inputArea">
+                <div class="icon-container input-change-icon">
+                    <span class="iconfont" title="上传外部图片" id="externalImage">&#xe645;</span>
+                    <span class="iconfont" title="设置透明度" id="setOpacity">&#xe60d;</span>
+                </div>
+                <div class="info-input">
+                    <!-- 输入外部图片地址 -->
+                    <input id="inputValue" type="text" placeholder="" />
+                    <div class="icon-container input-button">
+                        <span class="iconfont" title="确认" id="confirm">&#xe616;</span>
+                        <span class="iconfont" title="清空" id="clear">&#xe600;</span>
+                    </div>
+                </div>
+            </div>
+            <button class="button" id="selectImage">上传本地图片</button>
         </header>
         <nav class="list" id="list">
             <!-- <div class="image-container">
