--- a/src/webview/background/index.html
+++ b/src/webview/background/index.html
@@ -26,7 +26,9 @@
                     <span class="warning-info" id="inputWarning"></span>
                 </div>
             </div>
-            <button class="button" id="selectImage">上传本地图片</button>
+            <button class="button" id="selectImage">
+                <span class="iconfont"></span>上传本地图片
+            </button>
         </header>
         <nav class="list" id="list">
             <!-- <div class="image-container">
