图片初始化和缓存数据对照排序时，需要加上索引为-1的判断，方式死循环
图片列表渲染方式修改，使用proxy双向绑定，优化增删操作

切换储存路径后的页面刷新待完成

添加列表数据加载时的动画和相关文字提示

--- a/src/webview/background/index.html
+++ b/src/webview/background/index.html
@@ -31,13 +31,14 @@
             </button>
         </header>
         <nav class="list" id="list">
+            <div class="image-list-info" id="imageListInfo">
+                <span class="iconfont"></span>
+                <span class="info-content"></span>
+            </div>
             <!-- <div class="image-container">
                 <img class="image" loading="lazy" src="https://raw.githubusercontent.com/wangyige0701/vscodeCustomExtension/master/resources/image/title.png">
                 <span class="image-operation image-select icon-circle-background select"></span>
                 <span class="image-operation image-delete icon-delete"></span>
-            </div> -->
-            <!-- <div class="image-container select">
-                <img class="image" src="https://raw.githubusercontent.com/wangyige0701/vscodeCustomExtension/master/resources/image/title.png">
             </div> -->
         </nav>
     </div>
