webview选中图标的数据改为代理双向绑定更新页面样式
修改删除方法，改为允许批量删除

添加背景图随机切换方法，每次激活扩展后进行判断并随机切换背景

--- a/src/webview/background/index.html
+++ b/src/webview/background/index.html
@@ -29,17 +29,16 @@
             <button class="button" id="selectImage">
                 <span class="iconfont"></span>上传本地图片
             </button>
+            <div class="batch-operation">
+                <button class="button single" id="randomBack">随机设置（全部）</button>
+                <button class="button delete batch" id="batchDelete">删除选中图片</button>
+            </div>
         </header>
         <nav class="list" id="list">
             <div class="image-list-info" id="imageListInfo">
                 <span class="iconfont"></span>
                 <span class="info-content"></span>
             </div>
-            <!-- <div class="image-container">
-                <img class="image" loading="lazy" src="https://raw.githubusercontent.com/wangyige0701/vscodeCustomExtension/master/resources/image/title.png">
-                <span class="image-operation image-select icon-circle-background select"></span>
-                <span class="image-operation image-delete icon-delete"></span>
-            </div> -->
         </nav>
     </div>
     <!-- js文件 -->
