webview：按钮文字不换行，鼠标悬浮显示按钮文字

--- a/webview/background/index.html
+++ b/webview/background/index.html
@@ -26,17 +26,17 @@
                     <span class="warning-info" id="inputWarning"></span>
                 </div>
             </div>
-            <button class="button" id="selectImage">
+            <button class="button" id="selectImage" title="上传本地图片">
                 <span class="iconfont"></span>上传本地图片
             </button>
             <div class="batch-operation">
                 <div class="batch-operation-index-one">
-                    <button class="button single" id="randomBack">随机设置（全部）</button>
-                    <button class="button delete batch" id="batchDelete">删除选中图片</button>
+                    <button class="button single" id="randomBack" title="随机设置（全部）">随机设置（全部）</button>
+                    <button class="button delete batch" id="batchDelete" title="删除选中图片">删除选中图片</button>
                 </div>
                 <div class="batch-operation-index-two">
-                    <button class="button" id="selectAll">全选</button>
-                    <button class="button cancel" id="selectCancel">取消选中</button>
+                    <button class="button" id="selectAll" title="全选">全选</button>
+                    <button class="button cancel" id="selectCancel" title="取消选中">取消选中</button>
                 </div>
             </div>
         </header>
