--- a/webview/background/index.html
+++ b/webview/background/index.html
@@ -26,8 +26,8 @@
                     <span class="warning-info" id="inputWarning"></span>
                 </div>
             </div>
-            <button class="button" id="selectImage" title="上传本地图片">
-                <span class="iconfont"></span>上传本地图片
+            <button class="button" id="selectImage" title="选择本地图片">
+                <span class="iconfont"></span>选择本地图片
             </button>
             <div class="batch-operation">
                 <div class="batch-operation-index-one">
